--- a/javascript.html
+++ b/javascript.html
@@ -8,8 +8,13 @@
   </head>
   <body>
     <h1>Hello Olena</h1>
-    <script src="./js/number.js" type="module"></script>
+    <!-- <script src="./js/number.js" type="module"></script>
     <script src="./js/string.js" type="module"></script>
     <script src="./js/compair.js" type="module"></script>
+    <script src="./js/true_false.js" type="module"></script> -->
+
+    <!-- <script src="./js/if_else.js" type="module"></script> -->
+    <!-- <script src="./js/auto.js" type="module"></script> -->
+    <script src="./js/switch.js" type="module"></script>
   </body>
 </html>
