--- a/javascript.html
+++ b/javascript.html
@@ -14,10 +14,11 @@
     <!-- <script src="./js/true_false.js" type="module"></script> -->
 
     <!-- <script src="./js/if_else.js" type="module"></script> -->
-    <script src="./js/auto.js" type="module"></script>
+    <!-- <script src="./js/auto.js" type="module"></script> -->
     <!-- <script src="./js/switch.js" type="module"></script> -->
     <!-- <script src="./js/for_loop.js" type="module"></script> -->
     <!-- <script src="./js/purchase.js" type="module"></script> -->
     <!-- <script src="./js/discount.js" type="module"></script> -->
+    <script src="./js/task2_anton.js" type="module"></script>
   </body>
 </html>
