--- a/javascript.html
+++ b/javascript.html
@@ -19,8 +19,9 @@
     <!-- <script src="./js/for_loop.js" type="module"></script> -->
     <!-- <script src="./js/purchase.js" type="module"></script> -->
     <!-- <script src="./js/discount.js" type="module"></script> -->
-    <script src="./js/task2_anton.js" type="module"></script>
-    <script src="./js/test.js" type="module"></script>
+    <!-- <script src="./js/task2_anton.js" type="module"></script> -->
+    <!-- <script src="./js/test.js" type="module"></script> -->
+    <script src="./js/arrey.js" type="module"></script>
 
   </body>
 </html>
