--- a/javascript.html
+++ b/javascript.html
@@ -21,7 +21,7 @@
     <!-- <script src="./js/discount.js" type="module"></script> -->
     <!-- <script src="./js/task2_anton.js" type="module"></script> -->
     <!-- <script src="./js/test.js" type="module"></script> -->
-    <script src="./js/arrey.js" type="module"></script>
+    <script src="./js/array.js" type="module"></script>
 
   </body>
 </html>
