--- a/javascript.html
+++ b/javascript.html
@@ -21,7 +21,9 @@
     <!-- <script src="./js/discount.js" type="module"></script> -->
     <!-- <script src="./js/task2_anton.js" type="module"></script> -->
     <!-- <script src="./js/test.js" type="module"></script> -->
-    <script src="./js/array.js" type="module"></script>
+    <!-- <script src="./js/array.js" type="module"></script> -->
+    <!-- <script src="./js/array_repeta1.js" type="module"></script> -->
+    <script src="./js/array_repeta2.js" type="module"></script>
 
   </body>
 </html>
