--- a/javascript.html
+++ b/javascript.html
@@ -23,7 +23,7 @@
     <!-- <script src="./js/test.js" type="module"></script> -->
     <!-- <script src="./js/array.js" type="module"></script> -->
     <!-- <script src="./js/array_repeta1.js" type="module"></script> -->
-    <script src="./js/array_repeta2.js" type="module"></script>
-
+    <!-- <script src="./js/array_repeta2.js" type="module"></script> -->
+    <script src="./js/array_repeta3.js" type="module"></script>
   </body>
 </html>
