--- a/javascript.html
+++ b/javascript.html
@@ -24,6 +24,8 @@
     <!-- <script src="./js/array.js" type="module"></script> -->
     <!-- <script src="./js/array_repeta1.js" type="module"></script> -->
     <!-- <script src="./js/array_repeta2.js" type="module"></script> -->
-    <script src="./js/array_repeta3.js" type="module"></script>
+    <!-- <script src="./js/array_repeta3.js" type="module"></script> -->
+        <script src="./js/array_anton.js" type="module"></script>
+
   </body>
 </html>
