--- a/javascript.html
+++ b/javascript.html
@@ -25,7 +25,7 @@
     <!-- <script src="./js/array_repeta1.js" type="module"></script> -->
     <!-- <script src="./js/array_repeta2.js" type="module"></script> -->
     <!-- <script src="./js/array_repeta3.js" type="module"></script> -->
-        <script src="./js/array_anton.js" type="module"></script>
-
+    <!-- <script src="./js/array_anton.js" type="module"></script> -->
+    <script src="./js/function_repeta1.js" type="module"></script>
   </body>
 </html>
