--- a/javascript.html
+++ b/javascript.html
@@ -14,7 +14,9 @@
     <!-- <script src="./js/true_false.js" type="module"></script> -->
 
     <!-- <script src="./js/if_else.js" type="module"></script> -->
-    <!-- <script src="./js/auto.js" type="module"></script> -->
+
+    <script src="./js/auto.js" type="module"></script>
+    
     <!-- <script src="./js/switch.js" type="module"></script> -->
     <!-- <script src="./js/for_loop.js" type="module"></script> -->
     <!-- <script src="./js/purchase.js" type="module"></script> -->
@@ -26,6 +28,6 @@
     <!-- <script src="./js/array_repeta2.js" type="module"></script> -->
     <!-- <script src="./js/array_repeta3.js" type="module"></script> -->
     <!-- <script src="./js/array_anton.js" type="module"></script> -->
-    <script src="./js/function_repeta1.js" type="module"></script>
+    <!-- <script src="./js/function_repeta1.js" type="module"></script> -->
   </body>
 </html>
