--- a/javascript.html
+++ b/javascript.html
@@ -15,19 +15,24 @@
 
     <!-- <script src="./js/if_else.js" type="module"></script> -->
 
-    <script src="./js/auto.js" type="module"></script>
-    
+    <!-- <script src="./js/auto.js" type="module"></script> -->
+
     <!-- <script src="./js/switch.js" type="module"></script> -->
     <!-- <script src="./js/for_loop.js" type="module"></script> -->
     <!-- <script src="./js/purchase.js" type="module"></script> -->
     <!-- <script src="./js/discount.js" type="module"></script> -->
     <!-- <script src="./js/task2_anton.js" type="module"></script> -->
+
     <!-- <script src="./js/test.js" type="module"></script> -->
+
     <!-- <script src="./js/array.js" type="module"></script> -->
     <!-- <script src="./js/array_repeta1.js" type="module"></script> -->
     <!-- <script src="./js/array_repeta2.js" type="module"></script> -->
     <!-- <script src="./js/array_repeta3.js" type="module"></script> -->
     <!-- <script src="./js/array_anton.js" type="module"></script> -->
+    
     <!-- <script src="./js/function_repeta1.js" type="module"></script> -->
+
+    <script src="./js/function_anton.js" type="module"></script>
   </body>
 </html>
