--- a/javascript.html
+++ b/javascript.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Hello Olena</h1>
+
     <!-- <script src="./js/number.js" type="module"></script> -->
     <!-- <script src="./js/string.js" type="module"></script> -->
     <!-- <script src="./js/compair.js" type="module"></script> -->
@@ -30,9 +31,11 @@
     <!-- <script src="./js/array_repeta2.js" type="module"></script> -->
     <!-- <script src="./js/array_repeta3.js" type="module"></script> -->
     <!-- <script src="./js/array_anton.js" type="module"></script> -->
-    
+
     <!-- <script src="./js/function_repeta1.js" type="module"></script> -->
 
-    <script src="./js/function_anton.js" type="module"></script>
+    <!-- <script src="./js/function_anton.js" type="module"></script> -->
+
+    <script src="./js/1_my.js" type="module"></script>
   </body>
 </html>
