--- a/javascript.html
+++ b/javascript.html
@@ -36,6 +36,8 @@
 
     <!-- <script src="./js/function_anton.js" type="module"></script> -->
 
-    <script src="./js/1_my.js" type="module"></script>
+    <!-- <script src="./js/1_my.js" type="module"></script> -->
+     <script src="./js/object_repeta.js" type="module"></script>
+
   </body>
 </html>
