--- a/javascript.html
+++ b/javascript.html
@@ -37,7 +37,8 @@
     <!-- <script src="./js/function_anton.js" type="module"></script> -->
 
     <!-- <script src="./js/1_my.js" type="module"></script> -->
-     <script src="./js/object_repeta.js" type="module"></script>
+     <!-- <script src="./js/object_repeta.js" type="module"></script> -->
+     <script src="./js/object_anton.js" type="module"></script>
 
   </body>
 </html>
