--- a/javascript.html
+++ b/javascript.html
@@ -16,7 +16,6 @@
 
     <!-- <script src="./js/if_else.js" type="module"></script> -->
 
-    <!-- <script src="./js/auto.js" type="module"></script> -->
 
     <!-- <script src="./js/switch.js" type="module"></script> -->
     <!-- <script src="./js/for_loop.js" type="module"></script> -->
@@ -38,7 +37,13 @@
 
     <!-- <script src="./js/1_my.js" type="module"></script> -->
      <!-- <script src="./js/object_repeta.js" type="module"></script> -->
-     <script src="./js/object_anton.js" type="module"></script>
+     <script src="./js/object_repeta2.js" type="module"></script>
+
+
+     <!-- <script src="./js/object_anton.js" type="module"></script> -->
+   
+   
+     <!-- <script src="./js/auto.js" type="module"></script> -->
 
   </body>
 </html>
