--- a/javascript.html
+++ b/javascript.html
@@ -23,7 +23,7 @@
     <!-- <script src="./js/discount.js" type="module"></script> -->
     <!-- <script src="./js/task2_anton.js" type="module"></script> -->
 
-    <!-- <script src="./js/test.js" type="module"></script> -->
+    <script src="./js/test.js" type="module"></script>
 
     <!-- <script src="./js/array.js" type="module"></script> -->
     <!-- <script src="./js/array_repeta1.js" type="module"></script> -->
@@ -37,7 +37,7 @@
 
     <!-- <script src="./js/1_my.js" type="module"></script> -->
      <!-- <script src="./js/object_repeta.js" type="module"></script> -->
-     <script src="./js/object_repeta2.js" type="module"></script>
+     <!-- <script src="./js/object_repeta2.js" type="module"></script> -->
 
 
      <!-- <script src="./js/object_anton.js" type="module"></script> -->
