--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <nav>
         <ul>
           <li><a href="./javascript.html">Java Script</a></li>
+          <li><a href="./auto_modeul2.html">Автопроверка - Модуль 2</a></li>
 
           <li><a href="#">Студия</a></li>
           <li><a href="#">Портфолио</a></li>
