--- a/javascript.html
+++ b/javascript.html
@@ -39,12 +39,18 @@
 
     <!-- <script src="./js/1_my.js" type="module"></script> -->
      <!-- <script src="./js/object_repeta.js" type="module"></script> -->
-     <script src="./js/object_repeta2.js" type="module"></script>
+     <!-- <script src="./js/object_repeta2.js" type="module"></script> -->
+
+     <!-- <script src="./js/cart_repeta.js" type="module"></script> -->
 
 
      <!-- <script src="./js/object_anton.js" type="module"></script> -->
-   
-   
+    <!-- <script src="./js/object_anton2.js" type="module"></script> -->
+
+    <script src="./js/call-back_repeta1.js" type="module"></script>
+
+
+
      <!-- <script src="./js/auto.js" type="module"></script> -->
 
   </body>
