--- a/javascript.html
+++ b/javascript.html
@@ -47,11 +47,16 @@
      <!-- <script src="./js/object_anton.js" type="module"></script> -->
     <!-- <script src="./js/object_anton2.js" type="module"></script> -->
 
-    <script src="./js/call-back_repeta1.js" type="module"></script>
+    <!-- <script src="./js/call-back_repeta1.js" type="module"></script> -->
 
 
 
      <!-- <script src="./js/auto.js" type="module"></script> -->
+     <!-- <script src="./js/auto_mod4.js" type="module"></script> -->
+
+
+
+         <script src="./js/for.js" type="module"></script>
 
   </body>
 </html>
