--- a/javascript.html
+++ b/javascript.html
@@ -56,7 +56,9 @@
 
 
 
-         <script src="./js/for.js" type="module"></script>
+         <!-- <script src="./js/for.js" type="module"></script> -->
+
+         <script src="./js/array_pract.js" type="module"></script>
 
   </body>
 </html>
