--- a/javascript.html
+++ b/javascript.html
@@ -55,10 +55,12 @@
      <!-- <script src="./js/auto_mod4.js" type="module"></script> -->
 
 
+         <!-- <script src="./js/module5.js" type="module"></script> -->
 
          <!-- <script src="./js/for.js" type="module"></script> -->
 
-         <script src="./js/array_pract.js" type="module"></script>
+         <!-- <script src="./js/array_pract.js" type="module"></script> -->
+         <script src="./js/practics.js" type="module"></script>
 
   </body>
 </html>
