--- a/javascript.html
+++ b/javascript.html
@@ -60,7 +60,9 @@
          <!-- <script src="./js/for.js" type="module"></script> -->
 
          <!-- <script src="./js/array_pract.js" type="module"></script> -->
-         <script src="./js/practics.js" type="module"></script>
+         <!-- <script src="./js/practics.js" type="module"></script> -->
+
+        <script src="./js/call_back.js" type="module"></script>
 
   </body>
 </html>
