--- a/javascript.html
+++ b/javascript.html
@@ -62,7 +62,14 @@
          <!-- <script src="./js/array_pract.js" type="module"></script> -->
          <!-- <script src="./js/practics.js" type="module"></script> -->
 
-        <script src="./js/call_back.js" type="module"></script>
+        <!-- <script src="./js/call_back.js" type="module"></script> -->
+        <!-- <script src="./js/array_metod.js" type="module"></script> -->
+        <!-- <script src="./js/this_valera.js" type="module"></script> -->
+        <!-- <script src="./js/prototype.js" type="module"></script> -->
+
+
+
+        <script src="./js/code_wars.js" type="module"></script>
 
   </body>
 </html>
