--- a/javascript.html
+++ b/javascript.html
@@ -68,8 +68,9 @@
         <!-- <script src="./js/prototype.js" type="module"></script> -->
 
 
+        <script src="./js/array_metod2.js" type="module"></script>
 
-        <script src="./js/code_wars.js" type="module"></script>
+        <!-- <script src="./js/code_wars.js" type="module"></script> -->
 
   </body>
 </html>
